# dragncards-mc-plugin

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: release.yml  test.yml
fixtures/: civil_war_leader_decks.json  core_set_hero_decks.json  marvelcdb.json
fixtures/cerebro/: .cards.json.swp  cards.json  packs.json  sets.json
fixtures/post_load_action_list/: 1d99fd72-94e2-4b3b-81fa-2d438b4bb98f.json  3b27d8b9-9659-485f-a75d-34fdfe2c9af3.json  40785bf4-0e95-4716-a0fa-ba26a208f5c0.json  4ca66077-b356-4008-99db-7aea38a0fdd7.json  5007385a-9af0-47b3-a299-667972461357.json  54791d56-2ea6-4d60-a6be-33a553e653f4.json  680cd7bd-e591-400c-a56f-2e8aa999d536.json  76c1a33e-7eed-4980-9561-7e3d9f815c32.json  7e064172-ec55-4d3e-a290-6ad8dece58da.json  835990d9-d2ff-4c5c-aa8d-b8550e179847.json  9dff2afd-cbcb-4b95-9ed0-8c257dd5308d.json  9fc7ccda-7e3e-4194-8c0f-58118f1d8063.json  ad4f06da-bdb0-4a17-a18b-c104e55fd903.json  ba853cff-dc9d-4ce4-acbe-bde5678a5c9a.json  cc63f0f8-50d4-41b5-97c4-e5c8a20ff33d.json  e7543321-15b7-4a39-8b86-da6a913662c0.json  ea7258fb-8521-4bb5-afda-cd207ed9782f.json  f33d68e3-1b92-4b1e-93a4-32286a18de45.json
json/: .cardMenu.json.swp  .deckMenu.json.swp  .deckbuilder.json.swp  actionLists.json  announcements.json  automation.json  browse.json  cardBacks.json  cardMenu.json  cardProperties.json  cardTypes.json  clearTableOptions.json  closeRoomOptions.json  deckbuilder.json  defaultActions.json  faceProperties.json  functions.json  gameDefinition.json  gameProperties.json  groupMenu.json  groups.json  hotkeys.json  imageUrlPrefix.json  labels.json  layoutMenu.json  layouts.json  phases.json  playerCountMenu.json  playerProperties.json  pluginMenu.json  preBuiltDecks.json  preferences.json  saveGame.json  spawnExistingCardModal.json  steps.json  tokens.json  topBarCounters.json  touchBar.json
src/: cerebro.rs  cli.rs  dragncards.rs  main.rs  marvelcdb.rs
src/cli/: database.rs  decks.rs
src/dragncards/: civil_war_leader.rs  core_set_hero.rs  database.rs  decks.rs
