[package]
name = "dragncards-mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
clap = { version = "4.4.0", features = ["derive"] }
csv = "1.2.2"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.9.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.4.1", features = ["serde", "v5"] }

[dev-dependencies]
serde_json = "1.0.104"
tokio-test = "0.4.3"
